--- a/CSS/style.css
+++ b/CSS/style.css
@@ -576,3 +576,9 @@ input:checked + .checkbox-slider:before {
     -ms-transform: translateX(20px);
     transform: translateX(20px);
 }
+input:checked + .checkbox-slider.aqua:before {
+    background-color: aquamarine;
+}
+input:checked + .checkbox-slider.giallo:before {
+    background-color: var(--yellow);
+}
