--- a/CSS/style.css
+++ b/CSS/style.css
@@ -461,6 +461,9 @@ a {
     .mapboxgl-popup{
         width: 80%;
     }
+    .weekday{
+        justify-content: flex-start;
+    }
 }
 .mapboxgl-popup-content{
     background-color: var(--grey);
@@ -529,16 +532,14 @@ a {
 }
 .type, .weekday{
     width: 100%;
-    margin: 12px;
+    margin: 16px;
     gap: 24px;
     flex-wrap: wrap;
 }
-.weekday{
-    justify-content: flex-start;
-}
+
 .switch {
     position: relative;
-    display: inline-block;
+
     width: 40px;
     height: 20px;
 }
@@ -546,6 +547,9 @@ a {
     opacity: 0;
     width: 0;
     height: 0;
+}
+.control{
+    margin-bottom: 36px;
 }
 .checkbox-slider {
     position: absolute;
