--- a/CSS/style.css
+++ b/CSS/style.css
@@ -671,8 +671,8 @@ input:checked + .checkbox-slider.giallo:before {
     padding-top: var(--navbar-height);
     height: 100vh;
     width: 100vw;
-    /* background-color: rgba(200, 100, 0, 0.14);
-    pointer-events: none; */
+    /* background-color: rgba(200, 100, 0, 0.14); */
+    pointer-events: none;
 }
 
 
