--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,8 +61,11 @@
     color: var(--neutral_black);
     scroll-behavior: smooth;
 }
-body{
-    /* height: 100vh; */
+ol, ul{
+    padding: 0 16px;
+}
+li{
+    margin: 12px 0;
 }
 
 a {
@@ -799,7 +802,15 @@ input:checked + .day-selector{
     background-color: var(--neutral_dk-grey);
 }
 
-
+.shadow-deco{
+    text-shadow: 0px 0px 11px #6D86FF;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: auto;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto;
+    text-underline-position: from-font;
+}
 @media screen and (min-width: 768px){
     .mapboxgl-popup{
         width: 35%;
